@@ -1,7 +1,9 @@
 import logging
+from typing import List
 
 import pandas as pd
 
+import core.finance_data_example as cfidaexa
 import helpers.hunit_test as hunitest
 import optimizer.forecast_evaluator_with_optimizer as ofevwiop
 
@@ -10,7 +12,23 @@ _LOG = logging.getLogger(__name__)
 
 class TestForecastEvaluatorWithOptimizer1(hunitest.TestCase):
     @staticmethod
-    def get_data() -> pd.DataFrame:
+    def get_data(
+        start_datetime: pd.Timestamp,
+        end_datetime: pd.Timestamp,
+        asset_ids: List[int],
+        *,
+        bar_duration: str = "5T",
+    ) -> pd.DataFrame:
+        df = cfidaexa.get_forecast_price_based_dataframe(
+            start_datetime,
+            end_datetime,
+            asset_ids,
+            bar_duration=bar_duration,
+        )
+        return df
+
+    @staticmethod
+    def get_data2() -> pd.DataFrame:
         tz = "America/New_York"
         idx = [
             pd.Timestamp("2022-01-03 09:35:00", tz=tz),
@@ -57,7 +75,7 @@ class TestForecastEvaluatorWithOptimizer1(hunitest.TestCase):
             "volatility_penalty": 0.0,
             "relative_holding_penalty": 0.0,
             "relative_holding_max_frac_of_gmv": 0.6,
-            "target_gmv": 3000,
+            "target_gmv": 1e4,
             "target_gmv_upper_bound_penalty": 0.0,
             "target_gmv_hard_upper_bound_multiple": 1.00,
             "turnover_penalty": 0.0,
@@ -66,7 +84,7 @@ class TestForecastEvaluatorWithOptimizer1(hunitest.TestCase):
         return dict_
 
     def test_to_str1(self) -> None:
-        data = self.get_data()
+        data = self.get_data2()
         config_dict = self.get_config_dict()
         forecast_evaluator = ofevwiop.ForecastEvaluatorWithOptimizer(
             price_col="price",
@@ -78,42 +96,171 @@ class TestForecastEvaluatorWithOptimizer1(hunitest.TestCase):
             data,
             quantization="nearest_share",
         )
-        expected = """
-        # holdings_shares=
-                                    100   200
-        2022-01-03 09:35:00-05:00   0.0   0.0
-        2022-01-03 09:40:00-05:00 -12.0 -18.0
-        2022-01-03 09:45:00-05:00  12.0  18.0
-        2022-01-03 09:50:00-05:00   0.0   0.0
-        # holdings_notional=
-                                      100     200
-        2022-01-03 09:35:00-05:00     0.0     0.0
-        2022-01-03 09:40:00-05:00 -1201.2 -1809.0
-        2022-01-03 09:45:00-05:00  1200.6  1807.2
-        2022-01-03 09:50:00-05:00     0.0     0.0
-        # executed_trades_shares=
-                                    100   200
-        2022-01-03 09:35:00-05:00   0.0   0.0
-        2022-01-03 09:40:00-05:00 -12.0 -18.0
-        2022-01-03 09:45:00-05:00  24.0  36.0
-        2022-01-03 09:50:00-05:00 -12.0 -18.0
-        # executed_trades_notional=
-                                      100     200
-        2022-01-03 09:35:00-05:00     0.0     0.0
-        2022-01-03 09:40:00-05:00 -1201.2 -1809.0
-        2022-01-03 09:45:00-05:00  2401.2  3614.4
-        2022-01-03 09:50:00-05:00 -1202.4 -1809.0
-        # pnl=
-                                   100  200
-        2022-01-03 09:35:00-05:00  0.0  0.0
-        2022-01-03 09:40:00-05:00  0.0  0.0
-        2022-01-03 09:45:00-05:00  0.6  1.8
-        2022-01-03 09:50:00-05:00  1.8  1.8
-        # statistics=
-                                   pnl  gross_volume  net_volume     gmv     nmv
-        2022-01-03 09:35:00-05:00  0.0           0.0         0.0     0.0     0.0
-        2022-01-03 09:40:00-05:00  0.0        3010.2     -3010.2  3010.2 -3010.2
-        2022-01-03 09:45:00-05:00  2.4        6015.6      6015.6  3007.8  3007.8
-        2022-01-03 09:50:00-05:00  3.6        3011.4     -3011.4     0.0     0.0
-        """
+        expected = r"""
+# holdings_shares=
+                            100   200
+2022-01-03 09:35:00-05:00   0.0   0.0
+2022-01-03 09:40:00-05:00 -40.0 -60.0
+2022-01-03 09:45:00-05:00  40.0  60.0
+2022-01-03 09:50:00-05:00   0.0   0.0
+# holdings_notional=
+                              100     200
+2022-01-03 09:35:00-05:00     0.0     0.0
+2022-01-03 09:40:00-05:00 -4004.0 -6030.0
+2022-01-03 09:45:00-05:00  4002.0  6024.0
+2022-01-03 09:50:00-05:00     0.0     0.0
+# executed_trades_shares=
+                            100    200
+2022-01-03 09:35:00-05:00   0.0    0.0
+2022-01-03 09:40:00-05:00 -40.0  -60.0
+2022-01-03 09:45:00-05:00  80.0  120.0
+2022-01-03 09:50:00-05:00 -40.0  -60.0
+# executed_trades_notional=
+                              100      200
+2022-01-03 09:35:00-05:00     0.0      0.0
+2022-01-03 09:40:00-05:00 -4004.0  -6030.0
+2022-01-03 09:45:00-05:00  8004.0  12048.0
+2022-01-03 09:50:00-05:00 -4008.0  -6030.0
+# pnl=
+                           100  200
+2022-01-03 09:35:00-05:00  0.0  0.0
+2022-01-03 09:40:00-05:00  0.0  0.0
+2022-01-03 09:45:00-05:00  2.0  6.0
+2022-01-03 09:50:00-05:00  6.0  6.0
+# statistics=
+                            pnl  gross_volume  net_volume      gmv      nmv
+2022-01-03 09:35:00-05:00   0.0           0.0         0.0      0.0      0.0
+2022-01-03 09:40:00-05:00   0.0       10034.0    -10034.0  10034.0 -10034.0
+2022-01-03 09:45:00-05:00   8.0       20052.0     20052.0  10026.0  10026.0
+2022-01-03 09:50:00-05:00  12.0       10038.0    -10038.0      0.0      0.0
+"""
+        self.assert_equal(actual, expected, fuzzy_match=True)
+
+    def test_to_str_intraday_1_asset(self) -> None:
+        data = self.get_data(
+            pd.Timestamp("2022-01-03 09:30:00", tz="America/New_York"),
+            pd.Timestamp("2022-01-03 10:00:00", tz="America/New_York"),
+            asset_ids=[101],
+        )
+        config_dict = self.get_config_dict()
+        forecast_evaluator = ofevwiop.ForecastEvaluatorWithOptimizer(
+            price_col="price",
+            volatility_col="volatility",
+            prediction_col="prediction",
+            optimizer_config_dict=config_dict,
+        )
+        actual = forecast_evaluator.to_str(
+            data,
+            quantization="nearest_share",
+            liquidate_at_end_of_day=False,
+        )
+        expected = r"""
+# holdings_shares=
+                           101
+2022-01-03 09:40:00-05:00  0.0
+2022-01-03 09:45:00-05:00  6.0
+2022-01-03 09:50:00-05:00  6.0
+2022-01-03 09:55:00-05:00 -6.0
+2022-01-03 10:00:00-05:00 -6.0
+# holdings_notional=
+                               101
+2022-01-03 09:40:00-05:00     0.00
+2022-01-03 09:45:00-05:00  5984.36
+2022-01-03 09:50:00-05:00  5985.96
+2022-01-03 09:55:00-05:00 -5984.47
+2022-01-03 10:00:00-05:00 -5985.23
+# executed_trades_shares=
+                            101
+2022-01-03 09:40:00-05:00   0.0
+2022-01-03 09:45:00-05:00   6.0
+2022-01-03 09:50:00-05:00   0.0
+2022-01-03 09:55:00-05:00 -12.0
+2022-01-03 10:00:00-05:00   0.0
+# executed_trades_notional=
+                                101
+2022-01-03 09:40:00-05:00      0.00
+2022-01-03 09:45:00-05:00   5984.36
+2022-01-03 09:50:00-05:00      0.00
+2022-01-03 09:55:00-05:00 -11968.94
+2022-01-03 10:00:00-05:00      0.00
+# pnl=
+                            101
+2022-01-03 09:40:00-05:00  0.00
+2022-01-03 09:45:00-05:00  0.00
+2022-01-03 09:50:00-05:00  1.60
+2022-01-03 09:55:00-05:00 -1.49
+2022-01-03 10:00:00-05:00 -0.76
+# statistics=
+                            pnl  gross_volume  net_volume      gmv      nmv
+2022-01-03 09:40:00-05:00  0.00          0.00        0.00     0.00     0.00
+2022-01-03 09:45:00-05:00  0.00       5984.36     5984.36  5984.36  5984.36
+2022-01-03 09:50:00-05:00  1.60          0.00        0.00  5985.96  5985.96
+2022-01-03 09:55:00-05:00 -1.49      11968.94   -11968.94  5984.47 -5984.47
+2022-01-03 10:00:00-05:00 -0.76          0.00        0.00  5985.23 -5985.23
+"""
+        self.assert_equal(actual, expected, fuzzy_match=True)
+
+    def test_to_str_intraday_3_assets(self) -> None:
+        data = self.get_data(
+            pd.Timestamp("2022-01-03 09:30:00", tz="America/New_York"),
+            pd.Timestamp("2022-01-03 10:00:00", tz="America/New_York"),
+            asset_ids=[101, 201, 301],
+        )
+        config_dict = self.get_config_dict()
+        config_dict["target_gmv"] = 1e5
+        forecast_evaluator = ofevwiop.ForecastEvaluatorWithOptimizer(
+            price_col="price",
+            volatility_col="volatility",
+            prediction_col="prediction",
+            optimizer_config_dict=config_dict,
+        )
+        actual = forecast_evaluator.to_str(
+            data,
+            quantization="nearest_share",
+            liquidate_at_end_of_day=False,
+        )
+        expected = r"""
+# holdings_shares=
+                            101   201   301
+2022-01-03 09:40:00-05:00   0.0   0.0   0.0
+2022-01-03 09:45:00-05:00  40.0  -0.0 -60.0
+2022-01-03 09:50:00-05:00  40.0 -60.0   0.0
+2022-01-03 09:55:00-05:00 -40.0 -60.0  -0.0
+2022-01-03 10:00:00-05:00 -40.0 -60.0   0.0
+# holdings_notional=
+                                101       201       301
+2022-01-03 09:40:00-05:00      0.00      0.00      0.00
+2022-01-03 09:45:00-05:00  39895.73     -0.00 -59854.81
+2022-01-03 09:50:00-05:00  39906.38 -59850.07      0.00
+2022-01-03 09:55:00-05:00 -39896.46 -59868.37     -0.00
+2022-01-03 10:00:00-05:00 -39901.51 -59757.61      0.00
+# executed_trades_shares=
+                            101   201   301
+2022-01-03 09:40:00-05:00   0.0   0.0   0.0
+2022-01-03 09:45:00-05:00  40.0  -0.0 -60.0
+2022-01-03 09:50:00-05:00   0.0 -60.0  60.0
+2022-01-03 09:55:00-05:00 -80.0   0.0  -0.0
+2022-01-03 10:00:00-05:00   0.0   0.0   0.0
+# executed_trades_notional=
+                                101       201       301
+2022-01-03 09:40:00-05:00      0.00      0.00      0.00
+2022-01-03 09:45:00-05:00  39895.73     -0.00 -59854.81
+2022-01-03 09:50:00-05:00      0.00 -59850.07  59915.53
+2022-01-03 09:55:00-05:00 -79792.93      0.00     -0.00
+2022-01-03 10:00:00-05:00      0.00      0.00      0.00
+# pnl=
+                             101     201    301
+2022-01-03 09:40:00-05:00   0.00    0.00   0.00
+2022-01-03 09:45:00-05:00   0.00    0.00   0.00
+2022-01-03 09:50:00-05:00  10.65    0.00 -60.72
+2022-01-03 09:55:00-05:00  -9.92  -18.30   0.00
+2022-01-03 10:00:00-05:00  -5.05  110.75   0.00
+# statistics=
+                              pnl  gross_volume  net_volume       gmv       nmv
+2022-01-03 09:40:00-05:00    0.00          0.00        0.00      0.00      0.00
+2022-01-03 09:45:00-05:00    0.00      99750.54   -19959.08  99750.54 -19959.08
+2022-01-03 09:50:00-05:00  -50.06     119765.59       65.46  99756.45 -19943.69
+2022-01-03 09:55:00-05:00  -28.22      79792.93   -79792.93  99764.83 -99764.83
+2022-01-03 10:00:00-05:00  105.71          0.00        0.00  99659.12 -99659.12
+"""
         self.assert_equal(actual, expected, fuzzy_match=True)
