@@ -1,3 +1,7 @@
+# cmamp-1.4.0
+- 2022-11-15
+- Fix Jupytext issue
+
 # cmamp-1.3.0
 - 2022-11-14
 - Add `cvxopt` and `cvxpy`
